src/app/components/header/header.css
.header-shadow {
  transform: translateY(0) !important;
}

#main-header {
  background-color: var(--primary);
  display: flex;
  width: 60%;
  margin: 0 auto;
  justify-content: center;
  align-items: center;
  opacity: 1 !important;
  padding: 2rem 1.5rem;
  overflow: visible;

  & i {
    font-size: 2.4rem;
    right: 0;
    cursor: pointer;
  }

  & button {
    border: none;
    border-radius: 16px;
    background-color: var(--secondary);
    display: none;
    cursor: pointer;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    transform: rotateY(180deg);

    & i {
      margin: 0 auto;
    }
  }
}

#main-header div:not(#results-case) {
  background-color: var(--secondary);
  border-radius: 1.6rem;
  max-width: 70rem;
  margin: 0 auto;
  flex: 1 1 0;
  height: 4.5rem !important;
  border: 2px solid #8390d266 !important;
  padding-right: 1rem;
  position: relative;

  & #search {
    width: 100%;
    height: 100%;
    background-color: transparent;
    border: none;
    outline: none;
    text-indent: 1rem;
    font-size: 1.6rem;
    opacity: 0.8;
    font-weight: 500;

    &::placeholder {
      color: var(--text);
    }
  }
}

#results-case {
  display: grid;
}

#search-results {
  overflow: auto;
  max-height: 32.5rem;
  width: 100%;
  height: 0;
  background-color: var(--primary);
  border-radius: 0 0 1.8rem 1.8rem;
  transition: var(--animation);
  margin-top: 1.5rem;
  padding-inline: 0.8rem;
  border-top: none;

  & li a, .skeleton {
    display: flex;
    gap: 1rem;
    padding: 1.2rem;
    align-items: center;

    & h2 {
      font-size: 1.4rem;
      font-weight: 500;
    }

    & img,
    span {
      width: 4rem;
      height: 4rem;
      object-fit: cover;
      border: solid var(--stroke-color) 0.15rem;
      border-radius: 50%;
    }
  }
}

.skeleton {
  position: relative;

  & span,
  h2 {
    background-color: var(--secondary);
    overflow: hidden;
    position: relative;

    &::after {
      position: absolute;
      top: 0;
      bottom: 0;
      right: 0;
      left: 0;
      transform: translateX(-100%);
      content: "";
      background-image: linear-gradient(
        90deg,
        var(--secondary) 0,
        #1a1d2d6c 30%,
        #1a1d2d6c 60%,
        var(--secondary)
      );
      animation: shimer 1.8s infinite ease-in;
    }
  }

  & h2 {
    border-radius: 0.8rem;
    width: 12rem;
    height: 2.6rem;
    padding: 0.3rem 0.2rem;
  }
}

@keyframes shimer {
  100% {
    transform: translateX(100%);
  }
}

#signIn {
  display: grid;
  place-content: center;
  & #google-icon {
    width: 3rem;
  }
}

@media (max-width: 820px) {
  #main-header {
    width: 100%;
    gap: 10px;
    align-items: center;
    justify-content: start;
    position: fixed;
    z-index: 1;
    padding: 1.5rem;

    & i {
      font-size: 2.4rem;
      position: initial;
    }

    & div input {
      font-size: 1.4rem !important;
    }

    & #avatar {
      position: static;
    }

    & button {
      display: flex;
      position: initial;
      height: 45px;
      width: 50px;
      transform: rotateY(180deg);

      & i {
        font-size: 4rem;
      }
    }
  }
}

